--- a/index.html
+++ b/index.html
@@ -3,29 +3,28 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Responsive Contact Us Form</title>
-        <link rel=" stylesheet" href="styles.css">
+        <title>Contact Us</title>
+
+        <link rel=" stylesheet" href="style.css">
     </head>
     <body>
-        <div class="container">
-            <h1>Contact Us</h1>
-            <form action="#" method="post">
-                <div class="form-group">
-                    <label for="name">Name:</label>
-                    <input type="text" id="name" name="name" required>
-                </div>
-                <div class="form-group">
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required>
-                </div>
-                <div class="form-group">
-                    <label for="message">Message:</label>
-                    <textarea id="message" name="message" rows="4" required></textarea>
-                </div>
+        <div class="contact-container" >
+            <img src="contact-image.png" alt="Contact Illustration" class="contact-image">
+
+            <form class="contact-form" action="https://formspree.io/f/your-form-id" method="POST">
+                <h2>Contact Us</h2>
+                <label for="name">Name</label>
+                <input type="text" id="name" placeholder="You name" required>
+
+                <label for="email">Enter your email</label>
+                <input type="email" id="email" placeholder="you@example.com" required>
+
+                <label for="message">Enter your message</label>
+                <textarea id="message" placeholder="Your message..." rows="5" required></textarea>
+
                 <button type="submit">Send Message</button>
+
             </form>
         </div>  
-
-        <!-- <script src="script.js"></script> -->
     </body> 
 </html>
